# tps

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGES  LICENSE  Makefile.am  README.md  bootstrap  configure.ac  fix-dc-build-marvin.sh  run.sh  tps_config.h  tps_config.h.in
src/: .astylerc  .clang-format  .gitignore  BCintegrator.cpp  BCintegrator.cpp.orig  BCintegrator.hpp  BCintegrator.hpp.orig  BUPio.cpp  BUPio.hpp  BoundaryCondition.cpp  BoundaryCondition.hpp  CPPLINT.cfg  InOutBC.cpp  InOutBC.hpp  M2ulPhyS.cpp  M2ulPhyS.cpp.orig  M2ulPhyS.hpp  M2ulPhyS.hpp.orig  M2ulPhyS2Boltzmann.cpp  M2ulPhyS2Bolzmann.cpp  M2ulPhysS2Bolzmann.cpp  Makefile  Makefile.am  Makefile.docker  OLD_M2ulPhyS.cpp  algebraicSubgridModels.cpp  algebraicSubgridModels.hpp  algebraic_rans.cpp  algebraic_rans.hpp  argon_transport.cpp  argon_transport.hpp  averaging.cpp  averaging.hpp  averaging_and_rms.cpp  averaging_and_rms.hpp  calorically_perfect.cpp  calorically_perfect.hpp  cases.cpp  cases.hpp  chemistry.cpp  (+152 more)
src/pytps/: __init__.py  tabulated_reaction_rates.py  utils.py
src/test-mms/: p1r0-euler.run  p1r1-euler.run  p1r2-euler.run  p2r0-euler.run  p2r1-euler.run  p2r2-euler.run  p3r0-euler.run  p3r1-euler.run  p3r2-euler.run  periodic-cube.mesh  runP1.sh  runP2.sh  runP3.sh
test/: .gitattributes  .gitignore  Makefile.am  Makefile.in  annulus.test  argonMinimal.binary_mixture.test  argon_minimal.binary.test  argon_minimal.test  argon_ternary.test  autoPeriodic.test  aveLoMach.test  averages.gpu.test  averages.test  averaging.gpu.test  averaging.test  badcuda.cpp  badloop.cpp  bats  collision_integrals.test  count_gpus.sh  coupled-3d.interface.test  coupled-3d.py-loop.test  coupled-3d.splitcomm.test  coupled-3d.test  cuda-memcheck.test  cyl3d.dtconst.test  cyl3d.gpu.python.test  cyl3d.gpu.test  cyl3d.interp.test  cyl3d.mflow.gpu.test  cyl3d.mflow.test  cyl3d.python.splitcomm.test  cyl3d.python.test  cyl3d.sh  cyl3d.test  die.sh  die.test  diffusion_wall.test  distance_fcn.test  flow1d-coupling.python.test  (+90 more)
test/argon_output/: argon_output.pvd
test/diffusion_wall_output/: diffusion_wall_output.pvd
test/docker/: Dockerfile
test/inflow_outflow_output/: inflow_outflow_output.pvd
test/inputs/: annulus.axisym.viscous  annulus.axisym.viscous.ini  annulus.axisym.viscous.roe.ini  argon.plasma.lte2noneq.ini  argonMinimal.binary_mixture.ini  argonMinimal.diffusion_wall.ini  argonMinimal.inflow_outflow.ini  argonMinimal.ini  argonMinimal.multipliers.ini  argonTernary.ini  axisym-rings-variablecurrent.ini  axisym-rings.ini  check.jacobian.ini  coupled-3d-boltzmann.ini  coupled-3d.ini  fully-developed-pipe.csv  independent-coupled.ini  inlet_turb_k_v2_2.csv  input.2d.wedge.ini  input.2iters.cyl.ini  input.2iters.mflow.bulkVisc.dtconst.cyl  input.2iters.mflow.bulkVisc.dtconst.cyl.ini  input.2iters.mflow.cyl.ini  input.2iters.mflow.dtconst.cyl.ini  input.4iters.cyl.ini  input.4iters.cyl.ini.part  input.4iters.restart.cyl  input.4iters.restart.cyl.ini  input.8iters.restart.newp.cyl.ini  input.autoPeriodic.ini  input.aveLoMach.ini  input.cyl-2d.caseA  input.cyl-2d.caseA.ini  input.cyl-2d.caseB.ini  input.cyl-2d.caseC1.ini  input.cyl-2d.caseC2  input.cyl-2d.caseC2.ini  input.cyl-2d.caseD1.ini  input.cyl-2d.caseD2.ini  input.dtconst.2iters.cyl.ini  (+69 more)
test/lte-data/: .gitattributes  air_sutherland_lomach.h5  argon_thermo_1atm.h5  argon_transport_1atm.h5
test/mean_argon_output/: mean_argon_output.pvd
test/mean_diffusion_wall_output/: mean_diffusion_wall_output.pvd
test/mean_inflow_outflow_output/: mean_inflow_outflow_output.pvd
test/meshes/: .gitattributes  axi-annulus.msh  axi-pipe-wall-rm2.msh  axi-pipe.msh  axisym-rings.msh  beam-quad-o3-s5-p.mesh  boxStab.msh  channel182p4_25x9p4_THIN.msh  coupled-3d-em.msh  coupled-3d-flow.msh  cyl-2d-mixed.msh  cyl-tet-coarse-part1.txt  cyl-tet-coarse-part2.txt  cyl-tet-coarse-part4.txt  cyl-tet-coarse.msh  flatBox.msh  flatBoxPeriodic.msh  inline-rectangle-quad.mesh  lequereBoxCrs3wall.msh  periodic-square.mesh  qms-axisym.msh  rings.msh  simple_bar.msh  skinny-rectangle.mesh  slipPlate.msh  spongeBox.msh  torch-em-NEWCOIL.msh  torch-em-coarse2.msh  torch-flow-refine-step.msh  torch-flow-refine.msh  wedge.msh
test/output-annulus/: output-annulus.pvd
test/output-lequere-varmu/: output-lequere-varmu.pvd
test/output-lid/: output-lid.pvd
test/output-pipe/: output-pipe.pvd
test/output-pipe-arans/: output-pipe-arans.pvd
test/output-pipe-lam/: output-pipe-lam.pvd
test/output-tc/: output-tc.pvd
test/output-tgv2d/: output-tgv2d.pvd
test/rad-data/: .gitattributes  nec_sample.2.h5
test/rate-coefficients-nitrogen/: DeExcitation_Resonant.h5  StepIonization_Metastable.h5  dissEN2forward.h5  dissNN2vibBackward.h5  excitationEN2Backward.h5  ionizationEN2Forward.h5
test/ref_solns/: .gitattributes  annulus.50100.sol.h5  annulus.restart.sol.h5  coupled-3d.sol.h5  cyl-2d.cpu.h5  cyl-2d.meanRestart.cpu.h5  cyl.r0.p2.iter4.h5  cyl.r1.p2.iter4.h5  cyl3d.dtconst.cpu.h5  cyl3d.dtconst.gpu.h5  cyl3d.dtconst.gpu.varp.h5  cyl3d.dtconst.heatSource.cpu.h5  cyl3d.mflow.2iters.bulkVisc.dtconst.h5  cyl3d.mflow.2iters.h5  cyl3d.mflow.gpu.2iters.h5  cyl3d_coarse.4iters.h5  cyl3d_coarse.8iters.varp.h5  flow1d_coupling.h5  forcing-periodic-square.h5  pipe.100100.dtconst.sol.h5  pipe.100100.sol.h5  pipe.mix.161100.sol.h5  pipe.mix.restart.sol.h5  pipe.restart.sol.h5  plasma.lte1d.final.h5  plasma.lte1d.v48.h5  plasma.lte2d.final.h5  plasma.lte2d.restart.h5  plasma.lte2d.v48.h5  reaction.test.h5  restart_non-lte-restart-test.lte.h5  restart_non-lte-restart-test.noneq.h5
test/ref_solns_pressure_primitives/: By.h5  cyl-2d.meanRestart.cpu.h5  cyl.r0.p2.iter4.h5  cyl.r1.p2.iter4.h5  cyl3d.dtconst.cpu.h5  cyl3d.dtconst.gpu.h5  cyl3d.dtconst.gpu.varp.h5  cyl3d.mflow.2iters.bulkVisc.dtconst.h5  forcing-periodic-square.h5  (+1 more)
utils/: L2_diff.cpp  Makefile.am  beam_mesh.cpp  binary_mixture_ic.cpp  compute_rhs.cpp  pfield_interpolate.cpp  simple_periodic_mesh.cpp  sine_ic.cpp  tanh_ic.cpp  test_perfect_mixture.cpp  test_speed_of_sound.cpp  update_input_file.py  update_license.pl
(+313 files in other folders)
